--- a/index.html
+++ b/index.html
@@ -31,14 +31,7 @@
       <h1>Welcome to LetsChat App</h1>
     </nav>
 
-    <div class="container">
-      <div class="message left">harry: bhai kaisa hai tu</div>
-      <div class="message right">mayank: bhai mai acha tu bta bus</div>
-      <div class="message left">harry: bhai kaisa hai tu</div>
-      <div class="message right">mayank: bhai mai acha tu bta bus</div>
-      <div class="message left">harry: bhai kaisa hai tu</div>
-      <div class="message right">mayank: bhai mai acha tu bta bus</div>
-    </div>
+    <div class="container"></div>
 
     <div class="send">
       <form action="#" id="send-container">
